fix structure form

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -35,45 +35,52 @@
       <%= f.label 'Артикул', :class => "control-label" %><br>
       <%= f.text_field :article, :class => "form-control" %>
     </div>
-    <div class="v">
-      <div class="form-group col-xs-3">
-        <%= f.label 'Объем', :class => "control-label" %><br>
-        <%= f.text_field :unit_v, :class => "form-control" %>
+      <div class="v">
+       <fieldset>
+        <legend>Размер упаковки</legend>  
+        <div class="form-group col-xs-3">
+          <%= f.label 'Объем', :class => "control-label" %><br>
+          <%= f.text_field :unit_v, :class => "form-control" %>
+        </div>
+        <div class="form-group col-xs-3">
+          <%= f.label 'Ширина', :class => "control-label" %><br>
+          <%= f.text_field :width, :class => "form-control" %>
+        </div>
+        <div class="form-group col-xs-3">
+          <%= f.label 'Высота', :class => "control-label" %><br>
+          <%= f.text_field :height, :class => "form-control" %>
+        </div>
+        <div class="form-group col-xs-3">
+          <%= f.label 'Глубина', :class => "control-label" %><br>
+          <%= f.text_field :depth, :class => "form-control" %>
+        </div>
+       </fieldset>
+       <div class="form-group">
+         <%= f.label t('products.price'), :class => "control-label" %><br>
+         <%= f.text_field :price, :class => "form-control" %>
+       </div>
+       <div class="form-group">
+       </div>
+       <div class="form-group">
+         <%= f.hidden_field :brand_model_id, :class => "form-control" %>
+       </div>
       </div>
-      <div class="form-group col-xs-3">
-        <%= f.label 'Ширина', :class => "control-label" %><br>
-        <%= f.text_field :width, :class => "form-control" %>
-      </div>
-      <div class="form-group col-xs-3">
-        <%= f.label 'Высота', :class => "control-label" %><br>
-        <%= f.text_field :height, :class => "form-control" %>
-      </div>
-      <div class="form-group col-xs-3">
-        <%= f.label 'Глубина', :class => "control-label" %><br>
-        <%= f.text_field :depth, :class => "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label t('products.price'), :class => "control-label" %><br>
-        <%= f.text_field :price, :class => "form-control" %>
-      </div>
-      <div class="form-group">
-      </div>
-      <div class="form-group">
-        <%= f.hidden_field :brand_model_id, :class => "form-control" %>
-      </div>
-    </div>
   </div>
 
-<div class="row">
-  <p>Photos</p>
-  <div class="photo" id="photos">
-    <div class="addpict"></div> 
+ <div class="row">
+  <div class="col-sm-12">
+ <p>Photos</p>
+   <div class="photo" id="photos">
+  <div class="addpict"></div> 
+   </div>
   </div>
 </div>
 <div class="row">
-  <p>Size Images</p>
-  <div id="size_images">  
-    <div class="addpict"></div>
+  <div class="col-sm-12">
+   <p>Size Images</p>
+   <div id="size_images">  
+  <div class="addpict"></div>
+   </div>
   </div>
 </div>
   <%= f.hidden_field :photo_base64_form %>
