--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -88,6 +88,6 @@
 
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Добавить товар',class: 'btn btn-primary' %>
   </div>
 <% end %>
