--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -5,7 +5,7 @@
       <div class="form-group col-sm-6" id="factory">
         <%= fields_for(@brand_model) do |u| %>
           <div class="form-group" id="type_furniture">
-            <%= u.label :factory_id, 'Фабрика', :class => "control-label" %><br>
+            <%= label_tag :factories_select, 'Фабрика', :class => "control-label" %><br>
             <%= u.select :factory_id,
                 @factories.map { |o| 
                 [o.brand, o.id, {"id" => o.id}]},
@@ -15,7 +15,7 @@
             %>
           </div>
           <div class="form-group" id="brand_model">
-            <%= u.label :name,'Модель', :class => "control-label" %><br>
+            <%= label_tag :products_select,'Модель', :class => "control-label" %><br>
             <%= u.select :name,
                 @brand_models.map { |o| 
                 [o.name, o.name, {"id" => o.id}]},
