--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+ legend {
+ width: auto;
+ border: 0;
+ font-size: 14px;
+ padding: 0 2px;
+ margin: 0;
+ width: auto;
+ font-weight: bold;
+}
+fieldset {
+ border: 1px solid #c0c0c0;
+ padding: 0.35em 0.625em 0.75em;
+ border-radius: 4px;
+ margin: 0 0 10px; 
+}
+fieldset label {
+ font-weight: normal;
+ margin-left: -8px;
+}
+.modal-body a.chosen-single{
+ margin: 0;
+}
+.modal-body #factory .form-group {
+ margin-bottom: 30px;
+}
+#dialog .modal-title i {
+ top: 3px;
+ margin-right: 5px;
+}
