fix structure form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require jquery-ui/datepicker
  *= require jquery.jcrop
  *= require jquery.Jcrop.min
+ *= require products
  */	
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
