--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,29 +1,41 @@
 legend {
-	width: auto;
-	border: 0;
-	font-size: 14px;
-	padding: 0 2px;
-	margin: 0;
-	width: auto;
-	font-weight: bold;
+ width: auto;
+ border: 0;
+ font-size: 14px;
+ padding: 0 2px;
+ margin: 0;
+ width: auto;
+ font-weight: bold;
 }
 fieldset {
-	border: 1px solid #c0c0c0;
-	padding: 0.35em 0.625em 0.75em;
-	border-radius: 4px;
-	margin: 0 0 10px; 
+ border: 1px solid #c0c0c0;
+ padding: 0.35em 0.625em 0.75em;
+ border-radius: 4px;
+ margin: 0 0 10px; 
 }
 fieldset label {
-	font-weight: normal;
-	margin-left: -8px;
+ font-weight: normal;
+ margin-left: -8px;
 }
 .modal-body a.chosen-single{
-	margin: 0;
+ margin: 0;
 }
 .modal-body #factory .form-group {
-	margin-bottom: 30px;
+ margin-bottom: 35px;
 }
 #dialog .modal-title i {
-	top: 3px;
-	margin-right: 5px;
+ top: 3px;
+ margin-right: 5px;
+}
+#dialog input {
+ height: 30px;
+}
+#dialog p {
+ font-weight: bold;
+}
+#dialog .row .row {
+ margin: 0;
+}
+#dialog #photos {
+ margin-bottom: 20px;
 }
