--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,8 @@
 <tr id="product_<%= product.id %>">
+  <td><% unless Photo.where(product_id: product.id).first.nil? %>  
+  <%= image_tag Photo.where(product_id: product.id).first.img.url(:original) %>
+  <% end %>
+  </td>
   <td><%= link_to product.article, product %></td>
   <td><%= product.type_furniture.name %></td>
   <td><%= product.brand_model.name %></td>
