--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,12 @@
 <tr id="product_<%= product.id %>">
-  <td><% unless Photo.where(product_id: product.id).first.nil? %>  
-  <%= image_tag Photo.where(product_id: product.id).first.img.url(:original) %>
-  <% end %>
+  <td>
+  	<% if Photo.where(product_id: product.id).first %>  
+  		<% if Photo.where(product_id: product.id).first.img.url(:thumb) %>  
+  			<%= image_tag Photo.where(product_id: product.id).first.img.url(:thumb) %>
+  		<% else %>
+  			<%= Photo.where(product_id: product.id).first.img.url(:original) %>
+  		<% end %>
+  	<% end %>
   </td>
   <td><%= link_to product.article, product %></td>
   <td><%= product.type_furniture.name %></td>
