fix structure form

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,13 +9,13 @@
   <table class="table table-bordered table-striped table-hover">
     <thead>
       <tr>
-        <th><%= link_to 'Изображение' %></th>
-        <th><%= link_to t('products.article') %></th>
-        <th><%= link_to t('type_furnitures.type_furniture') %></th>
-        <th><%= link_to t('products.model') %></th>
-        <th><%= link_to 'Фабрика' %></th>
-        <th><%= link_to t('products.price') %></th>
-        <th colspan="3"></th>
+        <th><%= 'Изображение' %></th>
+        <th><%= 'Фабрика' %></th>
+        <th><%= t('products.model') %></th>
+        <th><%= t('products.article') %></th>
+        <th><%= t('type_furnitures.type_furniture') %></th>
+        <th><%= t('products.price') %></th>
+        <th> Действие </th>
       </tr>
     </thead>
 
