--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,18 +1,13 @@
 <tr id="product_<%= product.id %>">
   <td>
   	<% if Photo.where(product_id: product.id).first %>  
-  		<% if Photo.where(product_id: product.id).first(params[:thumb]) %>  
-  			<%= image_tag Photo.where(product_id: product.id).first.img.url(:thumb) %>
-  		<% else %>
-  			<%= image_tag Photo.where(product_id: product.id).first.img.url(:original) %>
-  		<% end %>
+		<%= image_tag Photo.where(product_id: product.id).first.img.url(:original) %>
   	<% end %>
   </td>
+  <td><%= product.brand_model.factory.brand %></td>
+  <td><%= product.brand_model.name %></td>
   <td><%= link_to product.article, product %></td>
   <td><%= product.type_furniture.name %></td>
-  <td><%= product.brand_model.name %></td>
-  <td><%= product.brand_model.factory.brand
- %></td>
   <td><%= product.price %></td>
   <td><%= link_to t('delete'), product, remote: true, :method => :delete, data: {confirm: "Delete Customer: #{product.article}"}, :class => 'btn btn-sm btn-danger' %></td>
 </tr>
