--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -42,3 +42,9 @@ fieldset label {
 #dialog #photos, #dialog #size_images {
  margin-bottom: 20px;
 }
+#modalIns .col-xs-3 {
+ margin: 0 5px;
+}
+#modalIns .col-xs-3 input { 
+ text-align: center;
+}
