--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -69,7 +69,7 @@
 
  <div class="row">
   <div class="col-sm-12">
- <p>Photos</p>
+ <p>Добавить фотографии товара</p>
    <div class="photo" id="photos">
   <div class="addpict"></div> 
    </div>
@@ -77,7 +77,7 @@
 </div>
 <div class="row">
   <div class="col-sm-12">
-   <p>Size Images</p>
+   <p>Добавить изображения размеров товара</p>
    <div id="size_images">  
   <div class="addpict"></div>
    </div>
