--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -43,7 +43,7 @@ fieldset label {
  margin-bottom: 20px;
 }
 #modalIns .col-xs-3 {
- margin: 0 5px;
+ padding: 0 5px;
 }
 #modalIns .col-xs-3 input { 
  text-align: center;
