--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -71,15 +71,25 @@
   <div class="col-sm-12">
  <p>Добавить фотографии товара</p>
    <div class="photo" id="photos">
-  <div class="addpict"></div> 
+      <% unless @photos.nil? %>  
+        <% @photos.each do |photo| %>
+          <%= image_tag photo.img.url(:thumb) %>
+        <% end %>
+      <% end %>
+      <div class="addpict"></div> 
    </div>
   </div>
 </div>
 <div class="row">
   <div class="col-sm-12">
    <p>Добавить изображения размеров товара</p>
-   <div id="size_images">  
-  <div class="addpict"></div>
+   <div id="size_images">
+    <% unless @size_images.nil? %>
+     <% @size_images.each do |size_image| %>
+        <%= image_tag size_image.img.url(:thumb) %>
+      <% end %>  
+    <% end %>  
+    <div class="addpict"></div>
    </div>
   </div>
 </div>
@@ -88,6 +98,6 @@
 
   </div>
   <div class="actions">
-    <%= f.submit 'Добавить товар',class: 'btn btn-primary', disabled: true %>
+    <%= f.submit  @product.new_record? ? t('create') : t('update'), class: 'btn btn-primary',  disabled: true %>
   </div>
 <% end %>
