--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,7 +23,7 @@
       <%= render @products %>      
     </tbody>
   </table>
-
+  <div class="addpict"></div> 
   <br>
   <%= render 'dialog' %>
 </div>
