--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  *= require jquery.jcrop
  *= require jquery.Jcrop.min
  *= require products
+ *= require projects
  */	
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
