--- a/app/views/photos/_field_form.html.erb
+++ b/app/views/photos/_field_form.html.erb
@@ -7,6 +7,7 @@
 <% end %>
 
 <script type="text/javascript">
+// может можно коцнуть
 function readURL(input) {
 	if (input.files && input.files[0]) {
 	    var reader = new FileReader();
