--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,26 +12,15 @@
   <table id="project" class="table table-bordered table-striped table-hover">
     <thead>
     <tr>
-      <th><%= t('user.name') %></th>
-      <th><%= t('user.email') %></th>
-      <th><%= t('project.object_name') %></th>
-      <th><%= t('project.city') %></th>
-      <th><%= t('project.style') %></th>      
-      <th><%= t('client.name') %></th>
-      <th><%= t('project.type_furniture') %></th>
-      <th><%= t('project.date_request') %></th>
-      <th><%= t('project.status') %></th>
-      <th><%= t('project.status_description') %></th>
-      <th><%= t('project.deadline') %></th>
-      <th><%= t('project.planned_budget') %></th>
-      <th><%= t('project.date_delivery_client') %></th>
-      <th><%= t('project.amount_contract') %></th>
-      <th><%= "Сумма по спецификации "%></th>
-      <th><%= t('project.client_prepayment') %></th>
-      <th><%= t('project.client_surcharge') %></th>
-      <th><%= t('project.status_transaction') %></th>
-      <th><%= t('project.delivery_status') %></th>
-      <th></th>
+      <th class="column1">Название проекта</th>
+      <th class="column2">Имя заказчика/архитектора</th>
+      <th class="column3">Дата запроса</th>
+      <th class="column4">Статус</th>
+      <th class="column5">Описание статуса</th>
+      <th class="column6">Дедлайн</th>
+      <th class="column7">Планируемый бюджет</th>
+      <th class="column8">Сумма по спецификации</th>
+      <th class="column9">Сумма по договору</th>
      </tr>
     </thead>
     <tbody id="projects">
