--- a/app/views/table_specification_lights/_form.html.erb
+++ b/app/views/table_specification_lights/_form.html.erb
@@ -10,59 +10,99 @@
       </ul>
     </div>
   <% end %>
-  <table class="table table-bordered table-striped" id="table_specification_light_form">
-  <tr>
-        <th class="photos"><%= t('table.image') %></th>
-        <th class="brand"><%= t('table.brand') %></th>
-        <th class="article"><%= t('table.article') %></th>
-        <th class="model"><%= t('product.model') %></th>
-        <th class="type_furniture"><%= t('table.type_furniture') %></th>
-        <th class="finishing"><%= t('table.finishing') %></th>
-        <th class="finishing_for_client"><%= t('table.finishing_for_client') %></th>
-        <th class="size"><%= t('table.size') %></th>
-        <th class="unit_price_factory"><%= t('table.unit_price_factory') %></th>
-        <th class="summ_netto"><%= t('table.summ_netto') %></th>
-        <th class="factor"><%= t('table.factor') %></th>
-        <th class="unit_price"><%= t('table.unit_price') %></th>
-        <th class="number_of"><%= t('table.number_of') %></th>
-        <th class="summ"><%= t('table.summ') %></th>
-        <th class="interest_percent"><%= t('table.interest_percent') %></th>
-        <th class="unit_with_interest"><%= t('table.unit_with_interest') %></th>
-        <th class="with_interest_"><%= t('table.with_interest') %></th>
-        <th class="interest"><%= t('table.interest') %></th>
-        <th class="architector_percent"><%= t('table.architector_percent') %></th>
-        <th class="architector"><%= t('table.architector') %></th>
-    <th class="architector_percent_from_order"><%= t('table.architector_percent_from_order') %></th>
-    <th class="destroy"></th>
-  </tr>
-  <tr>
-    <td class="photos"><div id="photos"></div><div id="current_img"></div><%= f.hidden_field :photo_id, id: :"photo_id" %></br></td>  
-    <td class="brand" id="brand"></td>
-   <td class="article"><%= f.autocomplete_field :product_id, autocomplete_product_article_project_specification_table_specifications_path, :id_element => '#product_id', :size => 75, :"data-autocomplete-label" => "Sorry, nothing found." %><%= f.hidden_field :product_id, id: :"product_id" %><span id="err_article"></span></td>
-    <td class="model" id="model"></td>
-    <td class="type_furniture" id="type_furniture"></td>
-    <td class="finishing"><%= f.text_field :finishing %></td>
-    <td class="finishing_for_client"><%= f.text_area :finishing_for_client %></td>
-    <td class="size"><div id="size_images"></div><div id="current_size_img"></div><%= f.text_area :size %><%= f.hidden_field :size_image_id, id: :"size_image_id" %></td> 
-    <td class="unit_price_factory"><%= f.number_field :unit_price_factory, value: 0 %></td> 
-    <td class="summ_netto"><div id="suma_netto"></div></td>  
-    <td class="factor" id="light_factor"></td>  
-    <td class="unit_price"><div id="unit_price_with_factor"></div></td>  
-    <td class="number_of"><%= f.number_field :number_of, value: 1 %></td>
-    <td class="summ"><div id="sum_with_factor"></div></td>  
-    <td class="interest_percent"><%= f.number_field :interest_percent, value: 30 %></td>  
-    <td class="unit_with_interest" id="unit_with_interest">---</td>
-    <td class="with_interest_"><div id="sum_with_interest"></div></td>  
-    <td class="interest"><div id="interest"></div></td>  
-    <td class="architector_percent"><%= f.number_field :arhitec_percent, value: 50 %></td>
-    <td class="architector"><div id="arhitector"></div></td>  
-    <td class="architector_percent_from_order"><div id="architector_percent_order"></div></td>  
-    <td class="destroy"></td>
-    
-  </tr>
+  <div id="webtable">
+    <table width="100%">
+      <thead>
+        <tr>
+          <th class="photo">Изображение</th>
+          <th class="factory">Фабрика</th>
+          <th class="model">Модель</th>
+          <th class="article">Артикул</th>
+          <th class="finishing_for_client">Отделка</th>
+          <th class="type_furniture">Описание</th>
+          <th class="size">Размер</th>
+          <th class="unit_price_factory">Цена фаб-ки</th>
+          <th class="factory-sum">Сумма фаб-ки</th>
+          <th class="number_of">Кол-во</th>
+          <th class="interest">Интерес</th>
+          <th class="full_price">Цена, &euro;</th>
+          <th class="full_sum">Сумма, &euro;</th>
+          <th class="architector">Архитектор</th>
+        </tr>
+      </thead>
+    <tbody>
+      <tr>
+        <td class="photo" id="photos"></td>
+          <%= f.hidden_field :photo_id, value: 0 %>
+          <%= f.hidden_field :photo_base64_form %> 
+          <td class="factory">
+          <%= form_for(@brand_model) do |u| %>
+            <%= u.select :factory_id,
+                        @factories.map { |o| [o.brand, o.id] },
+                        { include_blank: true },
+                        { id: 'factories_select',
+                        class: 'chosen-select' }
+            %>
+          </td>
+          <td class="model">
+            <%= u.select :name,
+                        @brand_models.map { |o| 
+                        [o.name, o.name, {"id" => o.id}]},
+                        { include_blank: true },
+                        { id: 'products_select',
+                        class: 'chosen-select' }
+            %>
+          </td>
+          <% end %>
+          <td class="article">
+            <%= form_for(@product) do |j| %>
+            <%= j.select :article,
+                        @articles.map { |o| 
+                        [o.article, o.article, {'id' => o.id}]},
+                        { include_blank: true },
+                        { id: 'articles_select',
+                        class: 'chosen-select' }
+            %>
+          </td>
+          <td class="finishing_for_client">
+            <%= f.text_area :finishing_for_client %>
+          </td>
+
+          <td class="type_furniture">
+            <%= j.collection_select :type_furniture_id, TypeFurniture.all,:id,:name, {include_blank: false}, {class: 'chosen-select', selected: 1} %>
+          </td>
+          <% end %>
+          <td class="size">
+            <div id="size_images"></div>
+            <%= f.hidden_field :size_image_id %>
+            <%= f.hidden_field :size_image_base64_form %>
+            <div><%= f.text_area :size %></div>
+          </td>
+          <td class="unit_price_factory">
+            <%= f.number_field :unit_price_factory, {value: 0, class: "price"} %>
+          <td class="factory-sum">0</td>
+          <td class="number_of">
+            <%= f.number_field :number_of, {value: 1, class: "number"} %>
+          <td class="interest">
+            <p><%= f.number_field :interest_percent, {value: 30, class: "interest"} %> %</p>
+            <p style="white-space:nowrap;"><span class="interest-e">0</span> &euro;</p>
+          </td>
+          <td class="full_price">0</td>
+          <td class="full_sum">0</td>
+          <td class="architector"><p style="white-space:nowrap;">Интерес %: 
+            <%= f.number_field :arhitec_percent, {value: 50, class: "arh-interest"}%>
+            </p>
+            <p>От заказа %: <span class="arh-order-percent">15</span><br>Интерес &euro;: <span class="arh-
+            interest-e">0</span></p>
+          </td>
+
+      </tr>
+    </tbody>
   </table>
-  
-  <div class="actions">
-    <%= f.submit :value => t('table.add_to')%>
+
+ <div class="actions">
+    <%= f.submit :value => t('table.add_to'), name: "create_ts", disabled: true, class: "btn btn-primary" %>
   </div>
+  </div>
+
 <% end %>
