--- a/app/views/table_specification_lights/index.html.erb
+++ b/app/views/table_specification_lights/index.html.erb
@@ -1,12 +1,14 @@
 <%= javascript_include_tag "table_specification_lights/index" %>
-<div class="container-fluid">
-  <p id="notice"><%= notice %></p>
-  <%= link_to t('table.print_pdf'), project_specification_table_specification_lights_path(@project, @specification, @table_specification_light, format: "pdf") %>
-  <%= label_tag(:print_sum, t('table.print_sum')) %>
-  
-  <%= check_box("print", "sum", {checked: @specification.print_sum}, "sit") %>
-  <%= render 'table' %>
+<div id="table_specification_light_page">
+	<div class="container-fluid">
+	  <p id="notice"><%= notice %></p>
+	  <%= link_to t('table.print_pdf'), project_specification_table_specification_lights_path(@project, @specification, @table_specification_light, format: "pdf") %>
+	  <%= label_tag(:print_sum, t('table.print_sum')) %>
+	  
+	  <%= check_box("print", "sum", {checked: @specification.print_sum}, "sit") %>
+	  <%= render 'table' %>
 
-  <%= link_to t('table.new_row'), new_project_specification_table_specification_light_path, remote: true , class: "table-button btn btn-primary" %>
+	  <%= link_to t('table.new_row'), new_project_specification_table_specification_light_path, remote: true , class: "table-button btn btn-primary" %>
+	</div>
 </div>
 
