fix open attach

--- a/app/assets/stylesheets/factories.scss
+++ b/app/assets/stylesheets/factories.scss
@@ -3,3 +3,74 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+table#factory {
+
+	table-layout: fixed;
+
+	th, td {
+		vertical-align: middle !important;
+		border: 0;
+	}
+	.column1 {
+		width: 11%;
+	}
+	.column2 {
+		width: 11%;
+	}
+	.column3 {
+		width: 11%;
+	}
+	.column4 {
+		width: 11%;
+	}
+	.column5 {
+		width: 11%;
+	}
+	.column6 {
+		width: 11%;
+	}
+	.column7 {
+		width: 11%;
+	}
+	.column8 {
+		width: 11%;
+	}
+	.column9 {
+		width: 11%;
+	}
+	.hider td {
+		padding-top: 0 !important;
+		padding-bottom: 0 !important;
+		vertical-align: baseline !important;
+	}
+	.hider td .in {
+		padding-top: 10px;
+	}
+	.accordion-toggle {
+		cursor:pointer;
+	}
+	.accordion-body div {
+		font-weight: normal;
+	}
+	.accordion-body div:first-child {
+		padding-bottom: 20px;
+		//font-size: 1.1em;
+		font-style: italic;
+	}
+	.accordion-body div:last-child {
+		padding-bottom: 20px;
+		font-size: 1.1em;
+		color: #333;
+	}
+	td.column9 {
+		vertical-align: middle !important;
+		font-style: normal;
+	}
+	.column9 .btn-info {
+		margin-bottom: 5px;
+	}
+	.hasDatepicker {
+		text-align: center;
+	}
+}
