--- a/app/views/factories/index.html.erb
+++ b/app/views/factories/index.html.erb
@@ -8,25 +8,18 @@
   </div>
   <div class="new-brand"></div>
  
-  <table id class="table table-bordered table-striped">
+  <table class="table table-striped">
     <thead>
     <tr>
-        <th><%= t('brand.brand') %></th>
-        <th><%= t('brand.web') %></th>
-        <th><%= t('brand.autorification') %></th>
-        <th><%= t('brand.style') %></th>
-        <th><%= t('brand.line_product') %></th>
-        <th><%= t('brand.catalog') %></th>
-        <th><%= t('brand.discount') %></th>
-        <th><%= t('brand.additional_discount') %></th>
-        <th><%= t('brand.delivery_terms') %></th>
-        <th><%= t('brand.minimum_order') %></th>
-        <th><%= t('brand.delivery_time') %></th>
-        <th><%= t('brand.light_factor') %></th>
-        <th><%= t('brand.delivery_time') %></th>
-        <th><%= t('brand.group_brend') %></th>
-        <th><%= t('brand.note') %></th>
-        <th><%=  %></th>
+        <th class="column1">Имя бренда</th>
+        <th class="column2">Направления</th>
+        <th class="column3">Скидка</th>
+        <th class="column4">Добавочная скидка</th>
+        <th class="column5">Срок доставки/дней</th>
+        <th class="column6">Минимальный заказ</th>
+        <th class="column7">Коэффициент</th>
+        <th class="column8">Срок поставки</th>
+        <th class="column9">Группа бренда</th>
     </tr>
     </thead>
     <tbody id="factories">
