--- a/app/views/table_specification_lights/index.html.erb
+++ b/app/views/table_specification_lights/index.html.erb
@@ -9,6 +9,17 @@
 	  <%= render 'table' %>
 
 	  <%= link_to t('table.new_row'), new_project_specification_table_specification_light_path, remote: true , class: "table-button btn btn-primary" %>
+	  
+	  <%= render 'tables/general_methods/photo/dialog' %>
+	  <%= render 'tables/general_methods/photo/dialog_table' %>
+	  <%= render 'tables/general_methods/size_image/dialog' %>
+	  <%= render 'tables/general_methods/discount/dialog' %>
+	  <%= render 'tables/general_methods/discount/dialog_table' %>
+	  <%= render 'tables/general_methods/delivery/dialog' %>
+	  <%= render 'tables/general_methods/delivery/dialog_table' %>
+	  <%= render 'tables/general_methods/packing_size/dialog' %>
+	  <%= render 'tables/general_methods/packing_size/dialog_table' %>	
+	
 	</div>
 </div>
 
