fix open attach

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  *= require jquery.Jcrop.min
  *= require products
  *= require projects
+ *= require factories
  */	
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
