--- a/app/views/factories/_factory.html.erb
+++ b/app/views/factories/_factory.html.erb
@@ -1,6 +1,6 @@
 <tr id="factory_<%= factory.id %>" data-toggle="collapse" data-target=".hidden1" data-parent="table" class="accordion-toggle">
 	<td class="column1"><%= factory.brand %></td>
-	<td class="column2"><%= factory.line_product %>/td>
+	<td class="column2"><%= factory.line_product %></td>
 	<td class="column3">
 		<% factory.discounts.each do |company| %>
 	      <%= company.percent %>
